@@ -106,6 +106,11 @@
  </glossentry>
 
  <glossentry>
+  <glossterm>book closing move</glossterm>
+  <glosssee>elementary moves</glosssee>
+ </glossentry>
+
+ <glossentry>
   <glossterm>book opening move</glossterm>
   <glosssee>elementary moves</glosssee>
  </glossentry>
@@ -191,6 +196,11 @@
  <glossentry>
   <glossterm><link linkend="packet-clone">cloning packets</link></glossterm>
   <glossdef><para>&nbsp;</para></glossdef>
+ </glossentry>
+
+ <glossentry>
+  <glossterm>close book</glossterm>
+  <glosssee>elementary moves</glosssee>
  </glossentry>
 
  <glossentry>
