@@ -88,6 +88,7 @@ Version 4.6  [ (under development) ]
         Class NTriangulation:
             - New routines isBall() and knowsBall() for recognising the
               3-dimensional ball.
+            - New elementary move closeBook().
             - Completely overhauled collapseEdge().  The eligiblity checks for
               this routine are now correct and not overly conservative, which
               makes this routine both useful and safe to use.  The big warning
@@ -130,8 +131,8 @@ Version 4.6  [ (under development) ]
             - Deprecated; users are advised to switch to the new arrays
               NEdge::edgeNumber and NEdge::edgeVertex instead.
     USER INTERFACE:
-        - The elementary moves dialog now has an additional "Collapse edge"
-          option.
+        - The elementary moves dialog now has additional "Close book"
+          and "Collapse edge" options.
         - Items in the triangulation composition list can now be copied
           into the clipboard via the right mouse button.  Amongst other
           things, this makes extracting the dehydration string much simpler.
